# dynalo

./: .gitignore  CMakeLists.txt
include/dynalo/: dynalo.hpp
include/dynalo/detail/linux/: dynalo.hpp
include/dynalo/detail/mac/: dynalo.hpp
include/dynalo/detail/windows/: dynalo.hpp
test/: CMakeLists.txt  loader.cpp  shared.hpp
